Tweak css file a little bit. Might be worthwhile if someone redid this (not me as I suck at that stuff)

--- a/src/main/resources/theme.css
+++ b/src/main/resources/theme.css
@@ -1,7 +1,8 @@
 .button {
     -fx-font-size: 16px;
-    -fx-background-radius: 0;
+    -fx-background-radius: 4.5;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
+    -fx-border-radius: 4.5;
     -fx-border-color: #000000;
     -fx-border-width: 0.1;
     -fx-background-color: #bfbfbf;
@@ -12,7 +13,7 @@
     -fx-background-color: #878787;
 }
 
-.label {
+.label2 {
     -fx-font-size: 22px;
     -fx-text-fill: white;
     -fx-background-radius: 0;
@@ -26,5 +27,5 @@
 }
 
 .root {
-    -fx-background-color: rgba(75, 75, 75, .90);
+    -fx-background-color: rgba(75, 75, 75, .80);
 }
