apple bg changed to no copyrighted-issue #3

--- a/src/main/resources/theme.css
+++ b/src/main/resources/theme.css
@@ -28,6 +28,6 @@
 }
 
 .root {
-    -fx-background-image: url("https://cloud4.azurewebsites.net/bg-sbr-java.jpg");
+    -fx-background-image: url("http://i.imgur.com/TI1KJrU.jpg");
     -fx-background-size: cover;
 }
